fix minor z-index bug in Header.js component

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -61,7 +61,7 @@
     width: 120px;
     text-align: center;
     border-radius: 10%;
-    z-index: 10;
+    z-index: 1000;
     
     
 }
